# CHORDS_Data_Downloader

./: .gitignore  README.md  chords_data_download.py  chords_dataframes.py  chords_local_download.py  pyproject.toml  requirements.txt
resources/: functions.py
resources/dev/: boiler-plate.txt  new-chords-portal.txt
src/chords_downloader/: __init__.py  chords_dataframes.py  chords_downloader.py  chords_local_download.py  main.py
src/chords_downloader/resources/: chords_client.py  functions.py
src/chords_downloader/resources/dev/: .env_[EXAMPLE]  boiler-plate.txt  env_[EXAMPLE]  new-chords-portal.txt  portals.txt
src/chords_downloader/tests/: test_chords_dataframes.py  test_chords_downloader.py  test_chords_local_download.py  test_reduce_datapoints.py
src/shortname_mapper/: catalog_builder.py  chords_portals.yaml
tests/: test_chords_downloader.py
