[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chords_downloader"
version = "2.0.0"
description = "Download data from a CHORDS portal using your user account API."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }  # or your actual license
authors = [
  { name = "Rebecca Zieber", email = "rzieber@ucar.edu" }
]

dependencies = [
  "requests==2.32.5",
  "numpy==1.26.2",
  "pandas==2.3.2",
]

[project.scripts]
chords-download = "chords_downloader.main:main"